--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Land Bee Plant</title>
+  <title>Товары из мёда пчёл «Land Bee Plant»</title>
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <!-- <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/style.min.css">
@@ -16,20 +16,78 @@
   <!-- === HEADER === -->
   <header class="header">
     <div class="container">
-
+      <div class="header__inner">
+        <a class="header__logo" href="">
+          <img class="logo" src="images/logo-sm.svg" alt="Логотип">
+        </a>
+        <div class="header__right-side">
+          <div class="header__user-panel">
+            <div class="header__search">
+              <form class="header__search-form" action="#">
+                <input class="header__search-input" type="text" name="search">
+                <button class="header__search-btn" type="submit">
+                  <img class="header__user-panel-icon" src="images/icons/magnifying-glass.svg" alt="Иконка поиска">
+                  Поиск
+                </button>
+              </form>
+            </div>
+            <button class="header__user-panel-btn">
+              <img class="header__user-panel-icon" src="images/icons/bag.svg" alt="Иконка корзины">
+              Корзина
+            </button>
+            <button class="header__user-panel-btn">
+              <img class="header__user-panel-icon" src="images/icons/user.svg" alt="Иконка пользователя">
+              Войти
+            </button>
+          </div>
+          <nav class="header__nav">
+            <ul class="header__nav-menu">
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">НОВИНКИ</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">МАГАЗИН</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">ДОСТАВКА И ОПЛАТА</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">ГДЕ КУПИТЬ</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">О НАС</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">НОВОСТИ</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">КОНТАКТЫ</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
   </header>
   <!-- === / HEADER === -->
 
-  <!-- <main class="main">
-    === SECTION ===
+  <main class="main">
+    <!-- === SECTION === -->
     <section class="SECTION">
       <div class="container">
-        
+
       </div>
     </section>
-    === / SECTION ===
-  </main> -->
+    <!-- === / SECTION === -->
+
+    <!-- === SECTION === -->
+    <section class="SECTION">
+      <div class="container">
+
+      </div>
+    </section>
+    <!-- === / SECTION === -->
+  </main>
 
   <!-- === FOOTER ===
   <footer class="footer">
